# mat

./: .clangd  .gitignore  CMakeLists.txt
include/: arithmetic.hpp  common.hpp  decomposition.hpp  mat.hpp  range.hpp  utility.hpp
src/: range.cc
test/: PLU_test.cc  access_test.cc  computation_test.cc  slice_test.cc
